--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,7 @@ http {
 
         # API proxy to backend
         location /api/ {
-            proxy_pass http://backend:8080/;
+            proxy_pass http://host.docker.internal:8080/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -34,7 +34,7 @@ http {
 
         # WebSocket proxy
         location /ws {
-            proxy_pass http://backend:8080;
+            proxy_pass http://host.docker.internal:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
